--- a/index.html
+++ b/index.html
@@ -1,62 +1,118 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chrome Extension Installation</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 600px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #f4f4f4;
-            text-align: center;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            color: #333;
-        }
-        ol {
-            text-align: left;
-            padding-left: 20px;
-        }
-        li {
-            margin-bottom: 10px;
-        }
-        a {
-            display: inline-block;
-            padding: 10px 15px;
-            margin-top: 10px;
-            background-color: #007bff;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background 0.3s;
-        }
-        a:hover {
-            background-color: #0056b3;
-        }
-        code {
-            background: #eee;
-            padding: 2px 5px;
-            border-radius: 5px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RIS‑Direkt‑Suche – Chrome Extension</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+      background-color: #f9f9f9;
+      color: #333;
+      line-height: 1.6;
+    }
+    h1, h2 {
+      color: #2c3e50;
+    }
+    h1 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .section {
+      margin-bottom: 40px;
+    }
+    ol {
+      text-align: left;
+      padding-left: 20px;
+    }
+    li {
+      margin-bottom: 10px;
+    }
+    a.button {
+      display: inline-block;
+      padding: 10px 20px;
+      margin: 10px 0;
+      background-color: #007bff;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+    a.button:hover {
+      background-color: #0056b3;
+    }
+    code {
+      background: #eee;
+      padding: 2px 5px;
+      border-radius: 5px;
+    }
+    footer {
+      text-align: center;
+      margin-top: 40px;
+      font-size: 0.9em;
+      color: #777;
+    }
+  </style>
 </head>
 <body>
-    <h1>Install Chrome Extension</h1>
-    <p>Follow these steps to install the extension:</p>
+  <h1>RIS‑Direkt‑Suche</h1>
+  
+  <div class="section">
+    <h2>Über die Erweiterung</h2>
+    <p>
+      RIS‑Direkt‑Suche ist eine praktische Chrome Extension, die automatisch den relevanten Suchbegriff (z. B. RIS‑Justiz Sätze, OGH‑Urteile, Gerichtszahlen, Fundstellen oder Gesetzesstellen) aus einem gemischten Eingabestring extrahiert.
+      Je nach erkanntem Typ wird der Nutzer direkt zum entsprechenden Ergebnis auf der <a href="https://ris.bka.gv.at" target="_blank">RIS-Webseite</a> weitergeleitet.
+      Findet die Erweiterung keinen passenden Suchbegriff, erfolgt als Fallback eine Google-Suche.
+    </p>
+  </div>
+  
+  <div class="section">
+    <h2>Installation</h2>
+    <p>Folge diesen Schritten, um die Erweiterung in Google Chrome zu installieren:</p>
     <ol>
-        <li><a href="file1.zip" download>Download file 1</a></li>
-        <li><a href="file2.zip" download>Download file 2</a></li>
-        <li><a href="file3.zip" download>Download file 3</a></li>
-        <li>Extract the files into a folder.</li>
-        <li>Open Chrome and go to <code>chrome://extensions/</code>.</li>
-        <li>Enable "Developer mode" (top right corner).</li>
-        <li>Click "Load unpacked" and select the extracted folder.</li>
+      <li>Klone das GitHub-Repository oder lade die folgenden Dateien herunter:
+        <ul>
+          <li><code>manifest.json</code></li>
+          <li><code>background.js</code></li>
+          <li><code>content.js</code></li>
+        </ul>
+      </li>
+      <li>Erstelle einen Ordner und kopiere alle heruntergeladenen Dateien in diesen Ordner.</li>
+      <li>Öffne Google Chrome und gehe zu <code>chrome://extensions/</code>.</li>
+      <li>Aktiviere den Entwicklermodus (oben rechts).</li>
+      <li>Klicke auf <strong>"Entpackte Erweiterung laden"</strong> und wähle den erstellten Ordner aus.</li>
+      <li>Die Erweiterung <strong>RIS‑Direkt‑Suche</strong> ist nun installiert und einsatzbereit.</li>
     </ol>
-    <p>Your extension is now installed!</p>
+  </div>
+  
+  <div class="section">
+    <h2>Funktionalität</h2>
+    <p>
+      Die Erweiterung arbeitet über die Chrome Omnibox. Gib dazu das Schlüsselwort <code>ris</code> gefolgt von deinem Suchbegriff in die Adressleiste ein.
+      Die Extension analysiert den Eingabestring, erkennt den Typ des Suchbegriffs und leitet dich automatisch zum entsprechenden Dokument auf der RIS-Webseite weiter.
+      So kannst du schnell und präzise gerichtliche Entscheidungen, Fundstellen und Gesetzesstellen finden.
+    </p>
+  </div>
+  
+  <div class="section">
+    <h2>Feedback und Unterstützung</h2>
+    <p>
+      Bei Fragen, Anregungen oder Problemen sende bitte eine E-Mail an: 
+      <a href="mailto:feedback@example.com">feedback@example.com</a>.
+    </p>
+    <p>
+      Wenn dir die Erweiterung gefällt, unterstütze das Projekt doch mit einer kleinen Spende:
+    </p>
+    <p>
+      <a class="button" href="https://www.buymeacoffee.com/deinprofil" target="_blank">Buy Me A Coffee</a>
+    </p>
+  </div>
+  
+  <footer>
+    <p>&copy; 2025 RIS‑Direkt‑Suche. Alle Rechte vorbehalten.</p>
+  </footer>
 </body>
 </html>
