--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Roboto', sans-serif;
-      background: linear-gradient(135deg, #e0f7fa, #ffffff);
+      background: linear-gradient(135deg, #f5f5f5, #eaeaea);
       color: #333;
     }
     .container {
@@ -35,7 +35,7 @@
       color: #2c3e50;
       margin-top: 30px;
       margin-bottom: 15px;
-      border-bottom: 2px solid #e0e0e0;
+      border-bottom: 2px solid #ccc;
       padding-bottom: 5px;
     }
     p {
@@ -51,7 +51,7 @@
       margin-bottom: 10px;
     }
     code {
-      background: #f4f4f4;
+      background: #f0f0f0;
       padding: 4px 8px;
       border-radius: 4px;
       font-size: 0.95em;
@@ -60,15 +60,24 @@
       display: inline-block;
       padding: 12px 25px;
       margin-top: 10px;
-      background-color: #007bff;
+      background-color: #2980b9;
       color: #fff;
       text-decoration: none;
       border-radius: 5px;
-      transition: background-color 0.3s ease;
+      transition: background-color 0.3s ease, transform 0.2s ease;
       font-weight: 500;
     }
     a.button:hover {
-      background-color: #0056b3;
+      background-color: #1c5980;
+      transform: translateY(-2px);
+    }
+    a {
+      color: #2980b9;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+    a:hover {
+      color: #1c5980;
     }
     footer {
       text-align: center;
@@ -98,7 +107,7 @@
       <h2>Über die Erweiterung</h2>
       <p>
         RIS‑Direkt‑Suche ist eine praktische Chrome Extension, mit der Sie über die Browserleiste schnell und einfach OGH-Urteile, Gesetzesstellen, RIS‑Justiz-Sätze oder Fundstellen aufrufen können. Je nach erkanntem Typ werden Sie direkt zum entsprechenden Ergebnis auf der <a href="https://ris.bka.gv.at" target="_blank">RIS-Webseite</a> weitergeleitet.
-        Falls die Chrome Extension das Format nicht erkennt, erfolgt als Fallback eine Google-Suche.
+        Falls die Erweiterung das Format nicht erkennt, erfolgt als Fallback eine Google-Suche.
       </p>
     </section>
     
@@ -116,7 +125,7 @@
         <li>Erstellen Sie einen Ordner und kopieren Sie alle heruntergeladenen Dateien in diesen Ordner.</li>
         <li>Öffnen Sie Google Chrome und gehen Sie zu <code>chrome://extensions/</code>.</li>
         <li>Aktivieren Sie den Entwicklermodus (oben rechts).</li>
-        <li>Klicken Sie auf <strong>"Entpackte Erweiterung laden"</strong> (oben links) und wählen Sie den erstellten Ordner mit den drei Dateien aus.</li>
+        <li>Klicken Sie auf <strong>"Entpackte Erweiterung laden"</strong> (oben links) und wählen Sie den erstellten Ordner aus.</li>
         <li>Die Erweiterung <strong>RIS‑Direkt‑Suche</strong> ist nun installiert und einsatzbereit.</li>
       </ol>
     </section>
@@ -124,7 +133,7 @@
     <section>
       <h2>Funktionalität</h2>
       <p>
-        Geben Sie in der Chrome Addresszeile das Schlüsselwort <code>ris</code> gefolgt von einem Leerzeichen und dem Suchbegriff (etwa § 21 IO, 5 Ob 124/98x) in die Adressleiste ein.
+        Geben Sie in der Chrome-Adresszeile das Schlüsselwort <code>ris</code> gefolgt von einem Leerzeichen und dem Suchbegriff (etwa <code>§ 21 IO, 5 Ob 124/98x</code>) ein.
         Die Extension analysiert den Eingabestring, erkennt den Typ des Suchbegriffs und leitet Sie automatisch zum entsprechenden Dokument auf der RIS-Webseite weiter.
         So können Sie schnell und präzise OGH-Entscheidungen, Fundstellen und Gesetzesstellen finden.
       </p>
