--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
       <ol>
         <li>Laden Sie die folgenden Dateien herunter:
           <ul>
-            <li><code>manifest.json</code></li>
-            <li><code>background.js</code></li>
-            <li><code>content.js</code></li>
+              <li><a href="https://raw.githubusercontent.com/infinitelearning1/ris-direkt-suche/main/manifest.json" download>manifest.json</a></li>
+              <li><a href="https://raw.githubusercontent.com/infinitelearning1/ris-direkt-suche/main/background.js" download>background.js</a></li>
+              <li><a href="https://raw.githubusercontent.com/infinitelearning1/ris-direkt-suche/main/content.js" download>content.js</a></li>
           </ul>
         </li>
         <li>Erstellen Sie einen Ordner und kopieren Sie alle heruntergeladenen Dateien in diesen Ordner.</li>
