--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RIS‑Direkt‑Suche – Chrome Extension</title>
+  <title>RIS‑Direkt‑Suche – Google Chrome Erweiterung</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   <style>
     * {
@@ -106,7 +106,7 @@
     <section>
       <h2>Über die Erweiterung</h2>
       <p>
-        RIS‑Direkt‑Suche ist eine praktische Chrome Extension, mit der Sie über die Browserleiste schnell und einfach OGH-Urteile, Gesetzesstellen, RIS‑Justiz-Rechtssätze oder Fundstellen aufrufen können. Je nach erkanntem Typ werden Sie direkt zum entsprechenden Ergebnis auf der <a href="https://ris.bka.gv.at" target="_blank">RIS-Webseite</a> weitergeleitet.
+        RIS‑Direkt‑Suche ist eine praktische Chrome Erweiterung, mit der Sie über die Browserleiste schnell und einfach OGH-Urteile, Gesetzesstellen, RIS‑Justiz-Rechtssätze oder Fundstellen aufrufen können. Je nach erkanntem Typ werden Sie direkt zum entsprechenden Ergebnis auf der <a href="https://ris.bka.gv.at" target="_blank">RIS-Webseite</a> weitergeleitet.
         Falls die Erweiterung das Format nicht erkennt, erfolgt als Fallback eine Google-Suche.
       </p>
     </section>
@@ -117,9 +117,9 @@
       <ol>
         <li>Laden Sie die folgenden Dateien herunter:
           <ul>
-              <li><a href="https://raw.githubusercontent.com/infinitelearning1/ris-direkt-suche/main/manifest.json" download>manifest.json</a></li>
-              <li><a href="https://raw.githubusercontent.com/infinitelearning1/ris-direkt-suche/main/background.js" download>background.js</a></li>
-              <li><a href="https://raw.githubusercontent.com/infinitelearning1/ris-direkt-suche/main/content.js" download>content.js</a></li>
+            <li><a href="#" onclick="forceDownload('https://raw.githubusercontent.com/infinitelearning1/ris-direkt-suche/main/manifest.json', 'manifest.json')">manifest.json</a></li>
+            <li><a href="#" onclick="forceDownload('https://raw.githubusercontent.com/infinitelearning1/ris-direkt-suche/main/background.js', 'background.js')">background.js</a></li>
+            <li><a href="#" onclick="forceDownload('https://raw.githubusercontent.com/infinitelearning1/ris-direkt-suche/main/content.js', 'content.js')">content.js</a></li>
           </ul>
         </li>
         <li>Erstellen Sie einen Ordner und kopieren Sie alle heruntergeladenen Dateien in diesen Ordner.</li>
@@ -145,4 +145,19 @@
     </footer>
   </div>
 </body>
+  <script>
+  function forceDownload(url, filename) {
+      fetch(url)
+        .then(response => response.blob())
+        .then(blob => {
+          const link = document.createElement('a');
+          link.href = URL.createObjectURL(blob);
+          link.download = filename;
+          document.body.appendChild(link);
+          link.click();
+          document.body.removeChild(link);
+        })
+        .catch(() => alert('Download fehlgeschlagen!'));
+  }
+</script>
 </html>
