--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <section>
       <h2>Funktionalität</h2>
       <p>
-        Geben Sie in der Chrome-Adresszeile das Schlüsselwort <code>ris</code> gefolgt von einem Leerzeichen und dem Suchbegriff (etwa <code>§ 21 IO, 10 Ob 15/23p</code>) ein. Das Paragraphenzeichen kann weggelassen werden; ebenso genügt die GZ der OGH-Entscheidung.
+        Geben Sie in der Chrome-Adresszeile das Schlüsselwort <code>ris</code> gefolgt von einem Leerzeichen und dem Suchbegriff (etwa <code>§ 21 IO, 10 Ob 15/23p</code>) ein. Das Paragraphenzeichen kann weggelassen werden; es genügt die GZ der OGH-Entscheidung.
         Die Extension analysiert die Eingabe, erkennt den Typ des Suchbegriffs, erstellt daraus einen aufrufbaren Link zum RIS und leitet Sie automatisch zum entsprechenden Dokument auf der RIS-Webseite weiter.
         So können Sie schnell und präzise OGH-Entscheidungen, Gesetzesstellen, RIS-Justiz-Rechtssätze und Entscheidungsfundstellen im RIS finden.
       </p>
