--- a/index.html
+++ b/index.html
@@ -151,7 +151,16 @@
       <p>
       </p>
     </section>
-      
+    <section>
+      <h2>Updates</h2>
+      <p>
+        <li>Update 13.3.2025, 15:30 Uhr: Zeitweise Weiterleitung auf Google bei manueller RIS-Suche wurde behoben. Dafür bitte die drei aktualisierten Dateien (erneut) herunterladen und die Erweiterung wie oben beschrieben installieren.</li> 
+      </p>
+      <p>
+            </p>
+      <p>
+      </p>
+    </section>
 
     <footer>
       <p>&copy; 2025</p>
