--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
       <p>
       </p>
     </section>
-    <section><center>
+    <section><center> <p>
+      
+    </p>
 <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="rissuche" data-color="#FFDD00" data-emoji="☕"  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
     </center></section>
       
