--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
       <p>
       </p>
     </section>
-    <section><center> <p>
+    <section> <p>
       
-    </p><div>
+    </p><div style="text-align:center;">
 <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="rissuche" data-color="#FFDD00" data-emoji="☕"  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
-    </div></center></section>
+    </div></section>
       
       <footer>
       <p>&copy; 2025</p>
