--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <p>
         Schneller Zugriff auf die Chrome-Adressleiste mit <code>STRG+L</code>. Geben Sie in der Chrome-Adresszeile das Schlüsselwort <code>ris</code> gefolgt von einem Leerzeichen und dem Suchbegriff (etwa <code>§ 21 IO, 10 Ob 15/23p</code>) ein. Das Paragraphenzeichen kann weggelassen werden; es genügt die GZ der OGH-Entscheidung.
         Die Extension analysiert die Eingabe, erkennt den Typ des Suchbegriffs, erstellt daraus einen aufrufbaren Link zum RIS und leitet Sie automatisch zum entsprechenden Dokument auf der RIS-Webseite weiter.
-        So können Sie schnell und präzise OGH-Entscheidungen, Gesetzesstellen, RIS-Justiz-Rechtssätze und Entscheidungsfundstellen im RIS finden.
+        So können Sie schnell und präzise OGH-Entscheidungen, Gesetzesstellen, RIS-Justiz-Rechtssätze und Entscheidungsfundstellen im RIS finden. Neu hinzugekommen ist nun auch das Aufrufen ganzer Gesetze: Hierzu das Schlüsselwort <code>ris</code> gefolgt von etwa <code>io</code> eingeben, um die gesamte Insolvenzordnung tagesaktuell abzurufen. Derzeit sind nur die wichtigsten Gesetze in der Erweiterung enthalten.
       </p>
     </section>
 
@@ -154,6 +154,7 @@
     <section>
       <h2>Updates</h2>
       <p>
+        <li>Update 8.10.2025, 16:30 Uhr: Erweiterung kann nun auch die wichtigsten Gesetze aufrufen.</li>
         <li>Update 13.3.2025, 15:30 Uhr: Zeitweise Weiterleitung auf Google bei manueller RIS-Suche wurde behoben. Dafür bitte die drei aktualisierten Dateien (erneut) herunterladen und die Erweiterung wie oben beschrieben installieren.</li> 
       </p>
       <p>
