--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
     <section>
       <h2>Updates</h2>
       <p>
-        <li>Update 8.10.2025, 16:30 Uhr: Erweiterung kann nun auch die wichtigsten Gesetze aufrufen.</li>
-        <li>Update 13.3.2025, 15:30 Uhr: Zeitweise Weiterleitung auf Google bei manueller RIS-Suche wurde behoben. Dafür bitte die drei aktualisierten Dateien (erneut) herunterladen und die Erweiterung wie oben beschrieben installieren.</li> 
+        <li>Update 8.10.2025, 16:30 Uhr: Erweiterung kann nun auch die wichtigsten Gesetze aufrufen. Dafür bitte die drei aktualisierten Dateien (erneut) herunterladen und die Erweiterung wie oben beschrieben installieren.</li>
+        <li>Update 13.3.2025, 15:30 Uhr: Zeitweise Weiterleitung auf Google bei manueller RIS-Suche wurde behoben. </li> 
       </p>
       <p>
             </p>
