--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         <li>Erstellen Sie einen Ordner und kopieren Sie die heruntergeladenen Dateien in diesen Ordner.</li>
         <li>Öffnen Sie Google Chrome und gehen Sie zu <code>chrome://extensions/</code>.</li>
         <li>Aktivieren Sie den Entwicklermodus (oben rechts).</li>
-        <li>Klicken Sie auf <strong>"Entpackte Erweiterung laden"</strong> (oben links) und wählen Sie den erstellten Ordner aus.</li>
-        <li>Die Erweiterung <strong>RIS‑Direkt‑Suche</strong> ist nun installiert und einsatzbereit.</li>
+        <li>Klicken Sie auf <strong>"Entpackte Erweiterung laden"</strong> (oben links) und wählen Sie den erstellten Ordner mit den drei Dateien aus.</li>
+        <li>Die Erweiterung <strong>RIS‑Direkt‑Suche</strong> ist nun installiert und einsatzbereit. Mit dem Schlüsselwort <code>ris</code> in der Adresszeile kann die Erweiterung angewählt werden.</li>
       </ol>
     </section>
     
