--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <li>Öffnen Sie Google Chrome und gehen Sie zu <code>chrome://extensions/</code>.</li>
         <li>Aktivieren Sie den Entwicklermodus (oben rechts).</li>
         <li>Klicken Sie auf <strong>"Entpackte Erweiterung laden"</strong> (oben links) und wählen Sie den erstellten Ordner mit den drei Dateien aus.</li>
-        <li>Die Erweiterung <strong>RIS‑Direkt‑Suche</strong> ist nun installiert und einsatzbereit. Mit dem Schlüsselwort <code>ris</code> in der Adresszeile kann die Erweiterung angewählt werden.</li>
+        <li>Die Erweiterung <strong>RIS‑Direkt‑Suche</strong> ist nun installiert und einsatzbereit. Mit Eingabe des Schlüsselworts <code>ris</code> in der Adresszeile kann die Erweiterung angewählt werden.</li>
       </ol>
     </section>
     
