--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>RIS‑Direkt‑Suche</h1>
+    <h1>RIS‑Direkt‑Suche v1.1</h1>
     
     <section>
-      <h2>Über die Erweiterung v1.1</h2>
+      <h2>Über die Erweiterung</h2>
       <p>
         RIS‑Direkt‑Suche ist eine praktische Chrome Erweiterung, mit der Sie über die Browserleiste schnell und einfach OGH-Urteile, Gesetzesstellen, RIS‑Justiz-Rechtssätze oder Entscheidungsfundstellen des RIS aufrufen können. Wird die Eingabe erkannt, werden Sie direkt zum entsprechenden Ergebnis auf der <a href="https://ris.bka.gv.at" target="_blank">RIS-Webseite</a> weitergeleitet.
         Falls die Erweiterung die Eingabe nicht erkennt, erfolgt als Fallback eine Google-Suche.
